--- a/css/styles.css
+++ b/css/styles.css
@@ -511,7 +511,7 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: var(--footer-soc-color);
+    background-color: var(--focus-hover);
     display: inline-block;
     display: flex;
     align-items: center;
