--- a/css/styles.css
+++ b/css/styles.css
@@ -119,10 +119,28 @@ body {
     letter-spacing: 0.02em;
     color: var(--color-navigation);
     text-decoration: none;
+    /* transition: color 1000ms linear; */
 }
 
 .nav-link:is(:hover, :focus) {
     color: var(--focus-hover);
+}
+
+.current {
+    position: relative;
+    color: var(--focus-hover);
+}
+
+.current::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    top: 44px;
+    background-color: var(--focus-hover);
+    border-radius: 2px;
 }
 
 /*--------------------------------------------- address header --------------------------------------------------*/
@@ -202,6 +220,7 @@ body {
     display: flex;
     padding: 16px 32px;
     margin-top: 48px;
+    /* transition: background-color 300ms linear; */
 }
 
 .button-hero:is(:focus, :hover) {
@@ -369,6 +388,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    /* transition: background-color 300ms linear, fill 300ms linear; */
 }
 
 .team-soc-icon {
