--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
     --background-title-color: #2e2f42;
     --icon-background-about: #F4F4FD;
     --footer-soc-color: #525252;
+    --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 p,
@@ -576,7 +577,32 @@ body {
 
 .portfolio-link {
     display: block;
+}
 
+.portfolio-link:hover .portfolio-cover-text {
+    transform: translate(0);
+}
+
+.portfolio-cover-wrap {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-cover-text {
+    position: absolute;
+    top: 0;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: calc(24 / 16);
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    background: #4D5AE5;
+    background-color: rgba(12, 28, 211, 0.5);
+    padding: 40px 32px 164px;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 300ms linear;
 }
 
 .portfolio-subject {
@@ -638,4 +664,46 @@ body {
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
     border: var(--focus-hover);
+}
+
+.backdrop {
+
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(23, 26, 36, 0.096);
+    transition: opacity 300ms linear, visibility 300ms linear;
+}
+
+.modal {
+    width: 500px;
+    min-height: 500px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1) rotate(0);
+    transition: transform 300ms linear;
+    padding: 20px;
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scaleY(0) rotate(-90deg);
+}
+
+.modal-close-btn {
+    width: 24px;
+    height: 24px;
+    border: 1px solid #999999;
+    background-color: transparent;
+    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
 }
