--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ body {
     letter-spacing: 0.02em;
     color: var(--color-navigation);
     text-decoration: none;
-    /* transition: color 1000ms linear; */
+    transition: color var(--transition)
 }
 
 .nav-link:is(:hover, :focus) {
@@ -157,6 +157,7 @@ body {
     letter-spacing: 0.02em;
     color: var(--color-addres-link);
     text-decoration: none;
+    transition: color var(--transition);
 }
 
 .address-link:is(:hover, :focus) {
@@ -221,7 +222,7 @@ body {
     display: flex;
     padding: 16px 32px;
     margin-top: 48px;
-    /* transition: background-color 300ms linear; */
+    transition: background-color var(--transition)
 }
 
 .button-hero:is(:focus, :hover) {
@@ -389,7 +390,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* transition: background-color 300ms linear, fill 300ms linear; */
+    transition: background-color var(--transition), fill var(--transition);
 }
 
 .team-soc-icon {
@@ -437,6 +438,7 @@ body {
     border: 1px solid #8E8F99;
     border-radius: 4px;
     fill: #afb1b8;
+    transition: fill var(--transition), border var(--transition);
 }
 
 .customers-link:hover,
@@ -537,6 +539,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color var(--transition);
 }
 
 .footer-soc-icon {
@@ -602,7 +605,7 @@ body {
     padding: 40px 32px 164px;
     height: 100%;
     transform: translateY(100%);
-    transition: transform 300ms linear;
+    transition: transform var(--transition);
 }
 
 .portfolio-subject {
@@ -652,10 +655,10 @@ body {
     color: #4D5AE5;
     background-color: #F4F4FD;
     cursor: pointer;
-    background: #F4F4FD;
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     padding: 12px 24px;
+    transition: border var(--transition), border-radius var(--transition), background-color var(--transition), color var(--transition);
 }
 
 .btn-list:is(:hover, :focus) {
@@ -666,30 +669,37 @@ body {
     border: var(--focus-hover);
 }
 
+/* -----------------------------------------------------------MODAl--------------------------------------------- */
 .backdrop {
-
+    position: fixed;
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(23, 26, 36, 0.096);
-    transition: opacity 300ms linear, visibility 300ms linear;
+    background: rgba(46, 47, 66, 0.4);
+    transition: var(--transition)
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
 }
 
 .modal {
-    width: 500px;
-    min-height: 500px;
+    width: 408px;
+    height: 576px;
     background-color: #ffffff;
     border-radius: 5px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1) rotate(0);
-    transition: transform 300ms linear;
+    transition: transform var(--transition);
     padding: 20px;
 }
 
 .backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%) scaleY(0) rotate(-90deg);
+    transform: translate(-50%, -50%) scaleY(0) rotate(-180deg);
 }
 
 .modal-close-btn {
@@ -698,12 +708,8 @@ body {
     border: 1px solid #999999;
     background-color: transparent;
     border-radius: 50%;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-left: auto;
-}
-
-.is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
 }
